...
    
    @IBOutlet var progressView: UIProgressView!
    private var estimatedProgressObsetvation :NSKeyValueObservation?
    weak var delegate: WebViewViewControllerDelegate?
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.accessibilityIdentifier = "UnsplashWebView"
        estimatedProgressObsetvation = webView.observe(
            \.estimatedProgress,
             options: [],
             changeHandler: { [weak self] _, _ in
                 guard let self = self else {return}
                 presenter?.didUpdateProgressValue(webView.estimatedProgress)
...
