...
        label.text = "Hello, world!"
        label.font = UIFont.systemFont(ofSize: 13)
        
        return label
    }()
    
    var logoutButton: UIButton = {
        let button = UIButton.systemButton(with: UIImage(systemName: "ipad.and.arrow.forward")!,
                                           target: self,
                                           action: #selector(logoutButtonAction)
        )
        button.accessibilityIdentifier = "logoutButton"
        button.tintColor = UIColor(named: "YP Red")
...
